code/server/LPMC_MNL_DC_S/slurm-181132.out
Starting optimization of LPMC_MNL_DC_S with biogeme at mer aoû 14 17:24:42 CEST 2019
Traceback (most recent call last):
  File "biogeme_bfgs_tol.py", line 8, in <module>
    from models import LPMC_MNL_DC
  File "../../models/__init__.py", line 1, in <module>
    from .SM_MNL import SM_MNL
  File "../../models/SM_MNL.py", line 6, in <module>
    import biogeme.biogeme as bio
  File "/home/glederre/pybio/lib/python3.6/site-packages/biogeme/biogeme.py", line 366
    opts = {'gtol' : gtol,'ftol' : np.finfo(float).eps, disp=True}
                                                            ^
SyntaxError: invalid syntax
srun: error: h133: task 0: Exited with exit code 1
srun: Terminating job step 181132.0
Finished at mer aoû 14 17:24:45 CEST 2019
